--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -255,14 +255,14 @@
               <hr style="border-color:#555">
 
               <label>Scale: <b>${PIXELS_PER_UNIT}</b> px/unit</label>
-              <label>Blue Radius: <input id="r1Input" type="number" value="${radius1}"></label>
+              <label> Radius: <input id="r1Input" type="number" value="${radius1}"></label>
               <label>Red Radius: <input id="r2Input" type="number" value="${radius2}"></label>
               <button id="applyBtn">Apply</button>
 
               <hr style="border-color:#555">
 
-              <strong>Custom Point Settings</strong>
-              <label>Label: <input id="labelInput" type="text" value="Custom Point"></label>
+              <strong>Custom Marker Settings</strong>
+              <label>Label Text: <input id="labelInput" type="text" value="Custom Marker"></label>
 
               <label>Icon Type:
                 <select id="iconType">
