--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -32,7 +32,6 @@
         line-height: 1.4em;
         user-select: none;
         max-width: auto;
-        
       }
       .panel label {
         display: block;
@@ -240,7 +239,7 @@
 
           div.innerHTML = `
             <div style="display:flex;justify-content:space-between;align-items:center;">
-              <strong>Map Controls</strong>
+              <strong>Lumiose Custom Map</strong>
               <button id="collapseBtn"
                       style="background:#222;color:#fff;border:none;
                              padding:2px 6px;border-radius:4px;cursor:pointer;">–</button>
